[gd_scene load_steps=7 format=3 uid="uid://c4ak4ykqmgkat"]

[ext_resource type="Script" path="res://scripts/components/TopBar.gd" id="1_bgqwv"]
[ext_resource type="Texture2D" uid="uid://c733b8st27oeu" path="res://assets/ui/close_minimize.png" id="2_5jb5p"]
[ext_resource type="Texture2D" uid="uid://b1vxlgp05a0gj" path="res://assets/ui/close_maximize.png" id="3_25dcd"]
[ext_resource type="Texture2D" uid="uid://d2t4a8gxi85rv" path="res://assets/ui/close_btn.png" id="4_0c8ef"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3hinv"]
bg_color = Color(0.00392157, 0.00392157, 0.00392157, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0eg4w"]

[node name="TopBar" type="PanelContainer"]
custom_minimum_size = Vector2(0, 30)
theme_override_styles/panel = SubResource("StyleBoxFlat_3hinv")
script = ExtResource("1_bgqwv")

[node name="HBox" type="HBoxContainer" parent="."]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 7

[node name="EditorButton" type="TextureButton" parent="HBox"]
custom_minimum_size = Vector2(26, 30)
layout_mode = 2
ignore_texture_size = true
stretch_mode = 5

[node name="SettingsButton2" type="TextureButton" parent="HBox"]
custom_minimum_size = Vector2(26, 30)
layout_mode = 2
ignore_texture_size = true
stretch_mode = 5

[node name="ProjectSettingsButton" type="TextureButton" parent="HBox"]
custom_minimum_size = Vector2(26, 30)
layout_mode = 2
ignore_texture_size = true
stretch_mode = 5

[node name="Spacer" type="VSeparator" parent="HBox"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_0eg4w")

[node name="MinimizeButton" type="TextureButton" parent="HBox"]
custom_minimum_size = Vector2(26, 30)
layout_mode = 2
texture_normal = ExtResource("2_5jb5p")
ignore_texture_size = true
stretch_mode = 5

[node name="MaximizeButton" type="TextureButton" parent="HBox"]
custom_minimum_size = Vector2(26, 30)
layout_mode = 2
texture_normal = ExtResource("3_25dcd")
ignore_texture_size = true
stretch_mode = 5

[node name="CloseButton" type="TextureButton" parent="HBox"]
custom_minimum_size = Vector2(26, 30)
layout_mode = 2
texture_normal = ExtResource("4_0c8ef")
ignore_texture_size = true
stretch_mode = 5

[node name="WindowTitle" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
text = "GeoScribe"
horizontal_alignment = 1

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="pressed" from="HBox/MinimizeButton" to="." method="_on_minimize_button_pressed"]
[connection signal="pressed" from="HBox/MaximizeButton" to="." method="_on_maximize_button_pressed"]
[connection signal="pressed" from="HBox/CloseButton" to="." method="_on_close_button_pressed"]
